# feat3

./: .gitignore  2d__p1__unrolled_8hpp_source.html  2d__q1__unrolled_8hpp_source.html  3d__p1__unrolled_8hpp_source.html  CMakeLists.txt  CMakeLists.txt.old  CTestConfig.cmake  CTestCustom.cmake  CTestCustom.cmake.in  README  README.txt  Welcome...  _formulas.tex  _formulas_dark.tex  adaptive__export__vtu_8hpp_source.html  adaptive__mesh_8hpp_source.html  adaptive__mesh__algorithms_8hpp_source.html  adaptive__mesh__layer_8hpp_source.html  adaptive__mesh__storage_8hpp_source.html  adaptive__parti__domain__control_8hpp_source.html  adaptive__refinement__utils_8hpp_source.html  adjactor_8hpp_source.html  adp__solver__base_8hpp_source.html  alg__dof__parti_8hpp_source.html  alg__dof__parti__system_8hpp_source.html  alglib__wrapper_8hpp_source.html  amavanka_8hpp_source.html  amavanka__base_8hpp_source.html  amg.html  analytic__function__operator_8hpp_source.html  analytic__projector_8hpp_source.html  analytic_lambda_function.html  annotated.html  annotated_dup.js  apply_8cu_source.html  apply_8hpp_source.html  apply__generic-eickt_8cpp_source.html  apply__generic_8hpp_source.html  apply__generic__banded-eickt_8cpp_source.html  apply__mkl_8cpp_source.html  (+5092 more)
applications/: CMakeLists.txt  biharmonic_smoother_bdry_deform-app.cpp  dbg_meshpart.cpp  debug_cub.cpp  debug_cub.sln  debug_cub.vcxproj  debug_cub.vcxproj.filters  dfg95_bench1.cpp  dudv_smoother_bdry_deform-app.cpp  dudv_smoother_excentric-app.cpp  foundation_comm_test-app.cpp  foundation_global_ops_concave_3procs_test-app.cpp  foundation_global_ops_concave_4procs_test-app.cpp  foundation_global_ops_convex_2procs_test-app.cpp  foundation_global_ops_convex_4procs_test-app.cpp  foundation_global_ops_synch_scal_test-app.cpp  foundation_partitioning_4procs_test-app.cpp  foundation_psystem_test-app.cpp  foundation_synch_test-app.cpp  foundation_system_test-app.cpp  hierarch_transfer_test-app.cpp  laplace_smoother_bdry_deform-app.cpp  lin_smoother_bdry_deform-app.cpp  mesh_smoother_bdry_deform-app.cpp  mesh_smoother_lvlset-app.cpp  mesh_smoother_resize-app.cpp  mesh_streamer-app.cpp  meshopt_hyperelasticity_resize-app.cpp  meshopt_refinement-app.cpp  navier_stokes_ccnd_q2p1.cpp  navier_stokes_cp2d_q2p1.cpp  navier_stokes_cp2d_q2q1.cpp  navier_stokes_solver_factory.cpp  parti_poisson_dirichlet_2d.cpp  poisson_bench_mg.cpp  poisson_dirichlet.cpp  poisson_dirichlet_2d.cpp  poisson_mixed.cpp  poisson_ms2_test-app.cpp  poisson_neumann.cpp  (+30 more)
applications/ccnd/: CMakeLists.txt  bench2plots.py  bench3plots.py  ccnd_common.hpp  ccnd_common_dfg95.hpp  ccnd_steady_appbase.hpp  ccnd_steady_dfg95.cpp  ccnd_steady_dricav.cpp  ccnd_steady_taygre.cpp  ccnd_steady_ypipe.cpp  ccnd_unsteady_appbase.hpp  ccnd_unsteady_dfg95.cpp
applications/ccnd_simple/: CMakeLists.txt  app_steady_01.cpp  app_unsteady_01.cpp  base.hpp  check_point.cpp  check_point.hpp  domain.cpp  domain.hpp  domain_control.cpp  domain_control.hpp  readme.txt  steady_solver.cpp  (+11 more)
area51/: CMakeLists.txt  FETI_multigrid_usquare.cpp  FETI_para_usquare.cpp  basis_dump.cpp  cgal_analyse_mesh.cpp  cgal_analyse_mesh_parallel.cpp  dbg_adaptive_mesh.cpp  dbg_adaptive_parti_domain_control.cpp  dbg_alg_dof_parti.cpp  dbg_alg_dof_parti1.cpp  dbg_alg_dof_parti2.cpp  dbg_alg_dof_parti3.cpp  dbg_amavanka.cpp  dbg_base_splitter.cpp  dbg_burgers_asm.cpp  dbg_cubature.cpp  dbg_direct_sparse_solver.cpp  dbg_dist_file_io.cpp  dbg_dist_mesh_distortion.cpp  dbg_dist_umbrella_smoother.cpp  dbg_fbm_reconst_test.cpp  dbg_global_masked_boundary.cpp  dbg_graph_asm.cpp  dbg_graph_omp.cpp  dbg_graph_render.cpp  dbg_integrator.cpp  dbg_integrator2.cpp  dbg_isoparam1.cpp  dbg_isoparam2.cpp  dbg_isoparam3.cpp  dbg_mesh_distortion.cpp  dbg_mesh_width.cpp  dbg_meshperm.cpp  dbg_nlopt.cpp  dbg_parti_domain_control.cpp  dbg_pmdcdsc.cpp  dbg_recursive_parti.cpp  dbg_slip_asm.cpp  dbg_sphere_fem.cpp  dbg_stabilise.cpp  (+17 more)
benchmarks/: CMakeLists.txt  axpy-bench.cpp  bandwidth-bench.cpp  benchmark.hpp  block_product_matvec-bench.cpp  cuda_synch_bench.cpp  dot_product-bench.cpp  io_bench.cpp  meshperm_assembly-bench.cpp  mixedprec_multigrid-bench.cpp  multiprec_hierarch-bench.cpp  parperf-bench.cpp  parperf1-bench.cpp  parperf2-bench.cpp  pcg-bench.cpp  poisson_multigrid-bench.cpp  product_matcsrmat-bench.cpp  product_matcsrmat-file-bench.cpp  product_matmat-bench.cpp  product_matvec-bench.cpp  product_matvec.cpp  product_matvec_dense-bench.cpp  product_matvec_mtx-bench.cpp  saddle_point_assembly-bench.cpp  stokes_multigrid-bench.cpp
control/: CMakeLists.txt  blocked_basic.hpp  checkpoint-test.cpp  checkpoint_control.hpp  poisson_mixed.hpp  scalar_basic.hpp  scalar_mixed.hpp  scalar_solver.hpp  solver_factory.hpp  statistics.hpp  stokes_3field.hpp  stokes_basic.hpp  stokes_blocked.hpp  stokes_power.hpp  voxel_transfer_assembler.hpp
kernel/: CMakeLists.txt  adjunctor.hpp  analytic_functor.hpp  archs.cpp  archs.hpp  backend.cpp  backend.hpp  base_header-test.cpp  base_header.hpp  base_header_TEST.cpp  base_mesh.hpp  base_mesh_1d.hpp  base_mesh_2d.hpp  base_mesh_3d.hpp  base_mesh_cell.hpp  base_mesh_cell_1d_edge.hpp  base_mesh_cell_2d_quad.hpp  base_mesh_cell_2d_tri.hpp  base_mesh_cell_3d_hexa.hpp  base_mesh_cell_3d_tetra.hpp  base_mesh_cell_data.hpp  base_mesh_cell_data_checker.hpp  base_mesh_cell_subdivision.hpp  base_mesh_item.hpp  base_mesh_test_1d.cpp  base_mesh_test_2d.cpp  base_mesh_test_3d.cpp  base_mesh_vertex.hpp  comm.cpp  comm.hpp  communication.hpp  compiler_gcc.hpp  compiler_msc.hpp  constants.cpp  constants.hpp  error_handler.hpp  eval_tags.hpp  feast.cpp  feast.hpp  graph.hpp  (+47 more)
test_system/: CMakeLists.txt  cuda.cu  cuda.hpp  run_mpi  run_tests  test_system-test.cpp  test_system.cpp  test_system.hpp
tools/: CMakeLists.txt
tutorials/: CMakeLists.txt  tutorial_01_poisson.cpp  tutorial_02_laplace.cpp  tutorial_03_andicore.cpp  tutorial_04_parser.cpp  tutorial_05_multigrid.cpp  tutorial_06_global.cpp  tutorial_07_stokes.cpp  tutorial_08_meshfile.cpp  tutorial_09_adaptivemesh.cpp  tutorial_x1_andicore_mg.cpp
(+2281 files in other folders)
